test/spec_vectors/unreached-invalid/fail/module_33.wat
(module (func $type-unary-num-vs-void-after-unreachable (unreachable) (block (drop (i32.eqz (nop))))))